FIx markup tests #7352

--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -22,9 +22,9 @@
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
-									<div aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row1cell0i" role="combobox">
+									<div aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="row 1, column Column 1" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row1cell0i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell0i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
+											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="row 1, column Column 1" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell0i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="-1">
 											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -67,9 +67,9 @@
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
-									<div aria-controls="testid0row1cell1i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 2" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row1cell1i" role="combobox">
+									<div aria-controls="testid0row1cell1i_list" aria-expanded="false" aria-invalid="false" aria-label="row 1, column Column 2" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row1cell1i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row1cell1i_list" aria-expanded="false" aria-label="Column 2" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell1i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
+											<input aria-controls="testid0row1cell1i_list" aria-expanded="false" aria-label="row 1, column Column 2" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell1i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="-1">
 											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -112,9 +112,9 @@
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
-									<div aria-controls="testid0row1cell2i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 3" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row1cell2i" role="combobox">
+									<div aria-controls="testid0row1cell2i_list" aria-expanded="false" aria-invalid="false" aria-label="row 1, column Column 3" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row1cell2i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row1cell2i_list" aria-expanded="false" aria-label="Column 3" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell2i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
+											<input aria-controls="testid0row1cell2i_list" aria-expanded="false" aria-label="row 1, column Column 3" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row1cell2i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="-1">
 											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -174,9 +174,9 @@
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
-									<div aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row3cell0i" role="combobox">
+									<div aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="row 2, column Column 1" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row3cell0i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell0i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
+											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="row 2, column Column 1" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell0i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="-1">
 											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -219,9 +219,9 @@
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
-									<div aria-controls="testid0row3cell1i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 2" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row3cell1i" role="combobox">
+									<div aria-controls="testid0row3cell1i_list" aria-expanded="false" aria-invalid="false" aria-label="row 2, column Column 2" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row3cell1i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row3cell1i_list" aria-expanded="false" aria-label="Column 2" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell1i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
+											<input aria-controls="testid0row3cell1i_list" aria-expanded="false" aria-label="row 2, column Column 2" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell1i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="-1">
 											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -264,9 +264,9 @@
 						<div class="sd-table__question-wrapper">
 							<div class="sd-selectbase">
 								<div class="sv-dropdown_select-wrapper">
-									<div aria-controls="testid0row3cell2i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 3" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row3cell2i" role="combobox">
+									<div aria-controls="testid0row3cell2i_list" aria-expanded="false" aria-invalid="false" aria-label="row 2, column Column 3" aria-required="false" class="sd-dropdown sd-dropdown--empty sd-input" id="testid0row3cell2i" role="combobox">
 										<div class="sd-dropdown__value">
-											<input aria-controls="testid0row3cell2i_list" aria-expanded="false" aria-label="Column 3" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell2i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
+											<input aria-controls="testid0row3cell2i_list" aria-expanded="false" aria-label="row 2, column Column 3" autocomplete="off" class="sd-dropdown__filter-string-input" id="testid0row3cell2i_0" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sd-dropdown_clean-button" style="display:none;" tabindex="-1">
 											<svg class="sd-dropdown_clean-button-svg sv-svg-icon" role="img">
