--- a/tests/markup/snapshots/matrixdynamic-totals.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-totals.snap.html
@@ -16,9 +16,9 @@
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
-									<div aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sv_q_dropdown_control" role="combobox">
+									<div aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="row 1, column Column 1" aria-required="false" class="sv_q_dropdown_control" role="combobox">
 										<div class="sv_q_dropdown__value">
-											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
+											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="row 1, column Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sv_q_dropdown_clean-button" style="display:none;" tabindex="-1">
 											<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
@@ -70,9 +70,9 @@
 						<div>
 							<div>
 								<div class="sv_select_wrapper">
-									<div aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="Column 1" aria-required="false" class="sv_q_dropdown_control" role="combobox">
+									<div aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-invalid="false" aria-label="row 2, column Column 1" aria-required="false" class="sv_q_dropdown_control" role="combobox">
 										<div class="sv_q_dropdown__value">
-											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
+											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="row 2, column Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
 										<div class="sv_q_dropdown_clean-button" style="display:none;" tabindex="-1">
 											<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
