Work for https://github.com/surveyjs/service/issues/1637 - fixed markup test

--- a/tests/markup/snapshots/survey-navigation.snap.html
+++ b/tests/markup/snapshots/survey-navigation.snap.html
@@ -2,26 +2,28 @@
 </div>
 <div class="sv_container">
 	<div class="sv-components-row">
-		<div class="sv_body sv_body--static sv-components-column sv-components-column--expandable" id="testidpage0">
-			<div class="sv_p_root">
-				<div class="sv_row">
-					<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
-						<div class="sv_q sv_qstn" data-name="q1" id="testid0">
-							<div role="presentation">
-								<div>
+		<div class="sv-components-column sv-components-column--expandable">
+			<div class="sv_body sv_body--static sv-components-column sv-components-column--expandable" id="testidpage0">
+				<div class="sv_p_root">
+					<div class="sv_row">
+						<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
+							<div class="sv_q sv_qstn" data-name="q1" id="testid0">
+								<div role="presentation">
 									<div>
+										<div>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="sv-components-column">
-				<div class="sv_nav sv-action-bar sv-action-bar--default-size-mode">
-					<div class="sv-action" id="custom-action">
-						<div class="sv-action__content">
-							<input class="sv_nav_btn" title="Custom Tooltip" type="button" value="Custom Action">
+				<div class="sv-components-column">
+					<div class="sv_nav sv-action-bar sv-action-bar--default-size-mode">
+						<div class="sv-action" id="custom-action">
+							<div class="sv-action__content">
+								<input class="sv_nav_btn" title="Custom Tooltip" type="button" value="Custom Action">
+							</div>
 						</div>
 					</div>
 				</div>
