Implement page errors in templates

--- a/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
@@ -26,7 +26,7 @@
 				<td class="sd-table__cell sd-table__cell--empty sd-table__cell--error" colspan="1" data-responsive-title="" title="">
 				</td>
 				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-bottom" colspan="1" data-responsive-title="" title="">
-					<div aria-live="polite" class="sd-question__erbox sd-question__erbox--below-question sd-question__erbox--outside-question" id="testid0row0cell1_errors" role="alert">
+					<div aria-live="polite" class="sd-element__erbox sd-error sd-question__erbox sd-question__erbox--below-question" id="testid0row0cell1_errors" role="alert">
 						<div>
 							<span aria-hidden="true">
 							</span>
