--- a/tests/markup/snapshots/matrixdropdown-cell-errors-top.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-top.snap.html
@@ -16,7 +16,7 @@
 				<td class="sd-table__cell sd-table__cell--empty sd-table__cell--error" colspan="1" data-responsive-title="" title="">
 				</td>
 				<td class="sd-table__cell sd-table__cell--error sd-table__cell--error-top" colspan="1" data-responsive-title="" title="">
-					<div aria-live="polite" class="sd-question__erbox sd-question__erbox--above-question sd-question__erbox--outside-question" id="testid0row1cell1_errors" role="alert">
+					<div aria-live="polite" class="sd-element__erbox sd-element__erbox--above-element sd-error sd-question__erbox sd-question__erbox--above-question" id="testid0row1cell1_errors" role="alert">
 						<div>
 							<span aria-hidden="true">
 							</span>
