--- a/tests/markup/snapshots/multipletext-error-bottom-v2.snap.html
+++ b/tests/markup/snapshots/multipletext-error-bottom-v2.snap.html
@@ -16,7 +16,7 @@
 		</tr>
 		<tr class="sd-multipletext__row">
 			<td class="sd-multipletext__cell sd-multipletext__cell--error sd-multipletext__cell--error-bottom">
-				<div aria-live="polite" class="sd-question__erbox sd-question__erbox--below-question sd-question__erbox--outside-question" id="testid0_0_errors" role="alert">
+				<div aria-live="polite" class="sd-element__erbox sd-error sd-question__erbox sd-question__erbox--below-question" id="testid0_0_errors" role="alert">
 					<div>
 						<span aria-hidden="true">
 						</span>
