--- a/tests/markup/snapshots/question-errors-v2-bottom.snap.html
+++ b/tests/markup/snapshots/question-errors-v2-bottom.snap.html
@@ -12,7 +12,7 @@
 		<div class="sd-question__content sd-text__content" role="presentation">
 			<input aria-describedby="testid0_errors" aria-invalid="true" aria-labelledby="testid0_ariaTitle" aria-required="true" class="sd-input sd-input--error sd-text" id="testid0i" placeholder="" type="text">
 		</div>
-		<div aria-live="polite" class="sd-question__erbox sd-question__erbox--below-question sd-question__erbox--outside-question" id="testid0_errors" role="alert">
+		<div aria-live="polite" class="sd-element__erbox sd-error sd-question__erbox sd-question__erbox--below-question" id="testid0_errors" role="alert">
 			<div>
 				<span aria-hidden="true">
 				</span>
