--- a/tests/markup/snapshots/multipletext-error-top-v2.snap.html
+++ b/tests/markup/snapshots/multipletext-error-top-v2.snap.html
@@ -2,7 +2,7 @@
 	<tbody>
 		<tr class="sd-multipletext__row">
 			<td class="sd-multipletext__cell sd-multipletext__cell--error sd-multipletext__cell--error-top">
-				<div aria-live="polite" class="sd-question__erbox sd-question__erbox--above-question sd-question__erbox--outside-question" id="testid0_0_errors" role="alert">
+				<div aria-live="polite" class="sd-element__erbox sd-element__erbox--above-element sd-error sd-question__erbox sd-question__erbox--above-question" id="testid0_0_errors" role="alert">
 					<div>
 						<span aria-hidden="true">
 						</span>
