--- a/tests/markup/snapshots/survey-navigation.snap.html
+++ b/tests/markup/snapshots/survey-navigation.snap.html
@@ -3,7 +3,7 @@
 <div class="sv_container">
 	<div class="sv-components-row">
 		<div class="sv-components-column sv-components-column--expandable">
-			<div class="sv_body sv_body--static sv-components-column sv-components-column--expandable" id="testidpage0">
+			<div class="sv_body sv_body--static" id="testidpage0">
 				<div class="sv_p_root">
 					<div class="sv_row">
 						<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
