--- a/tests/markup/snapshots/signaturepad-value.snap.html
+++ b/tests/markup/snapshots/signaturepad-value.snap.html
@@ -1,9 +1,14 @@
 <div class="sjs_sp_container sv_q_signaturepad" style="width:300px;">
-	<div class="sjs_sp_placeholder">
+	<div class="sjs_sp_placeholder" style="display:none;">
 		<span class="sv-string-viewer">Sign here</span>
 	</div>
 	<div>
 		<canvas class="sjs_sp_canvas" height="200" style="user-select:none; width:300px;" tabindex="0" width="300">
 		</canvas>
+	</div>
+	<div class="sjs_sp_controls">
+		<button class="sjs_sp_clear" title="Clear" type="button">
+			<span>✖</span>
+		</button>
 	</div>
 </div>
