work for the https://github.com/surveyjs/private-tasks/issues/345

--- a/tests/markup/snapshots/dropdown-with-other-value.snap.html
+++ b/tests/markup/snapshots/dropdown-with-other-value.snap.html
@@ -5,7 +5,7 @@
 				<span class="sv-string-viewer">Other (describe)</span>
 				<input aria-controls="testid0i_list" aria-expanded="false" aria-label="Question title" autocomplete="off" class="sv_q_dropdown__filter-string-input" id="testid0i_0" inputmode="text" placeholder="" readonly="" role="combobox" type="text">
 			</div>
-			<div class="sv_q_dropdown_clean-button" tabindex="0">
+			<div aria-hidden="true" class="sv_q_dropdown_clean-button">
 				<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
 					<use xlink:href="#icon-clear_16x16" class="">
 					</use>
