--- a/tests/markup/snapshots/matrixdynamic-totals.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-totals.snap.html
@@ -20,7 +20,7 @@
 										<div class="sv_q_dropdown__value">
 											<input aria-controls="testid0row1cell0i_list" aria-expanded="false" aria-label="row 1, column Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
-										<div class="sv_q_dropdown_clean-button" style="display:none;" tabindex="-1">
+										<div aria-hidden="true" class="sv_q_dropdown_clean-button" style="display:none;">
 											<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear_16x16" class="">
 												</use>
@@ -74,7 +74,7 @@
 										<div class="sv_q_dropdown__value">
 											<input aria-controls="testid0row3cell0i_list" aria-expanded="false" aria-label="row 2, column Column 1" autocomplete="off" class="sv_q_dropdown__filter-string-input" inputmode="text" placeholder="Select..." readonly="" role="combobox" type="text">
 										</div>
-										<div class="sv_q_dropdown_clean-button" style="display:none;" tabindex="-1">
+										<div aria-hidden="true" class="sv_q_dropdown_clean-button" style="display:none;">
 											<svg class="sv_q_dropdown_clean-button-svg sv-svg-icon" role="img">
 												<use xlink:href="#icon-clear_16x16" class="">
 												</use>
