--- a/examples_test/bootstrap/react.html
+++ b/examples_test/bootstrap/react.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <script src="https://unpkg.com/react@16.5.0/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@16.5.0/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/react@latest/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"/>
     <script src="../../build/survey-react/survey.react.min.js"></script>
   </head>
