--- a/examples_test/customWidget/react.html
+++ b/examples_test/customWidget/react.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>Welcome to React</title>
-  <script src="https://unpkg.com/react@16.5.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@16.5.0/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/react@latest/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@latest/umd/react-dom.development.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.js"></script>
 
   <!-- dx charts -->
