--- a/examples_test/default/react.html
+++ b/examples_test/default/react.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../../node_modules/react/umd/react.production.min.js"></script>
-    <script src="../../node_modules/react-dom/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/react@latest/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@latest/umd/react-dom.production.min.js"></script>
     <link rel="stylesheet" href="../../build/survey-react/survey.min.css"/>
     <script src="../../build/survey-react/survey.react.min.js"></script>
     <script src="./index.js"></script>
