Fix markup tests #7658

--- a/tests/markup/snapshots/paneldynamic-list-legacy-navigation.snap.html
+++ b/tests/markup/snapshots/paneldynamic-list-legacy-navigation.snap.html
@@ -5,6 +5,6 @@
 		<div class="sv_p_wrapper">
 		</div>
 		<button class="sv-paneldynamic__add-btn sv-paneldynamic__add-btn--list-mode" type="button">
-			<span>Add new</span>
+			<span><span class="sv-string-viewer">Add new</span></span>
 		</button>
 	</div>
