--- a/tests/markup/snapshots/paneldynamic-list.snap.html
+++ b/tests/markup/snapshots/paneldynamic-list.snap.html
@@ -25,7 +25,7 @@
 						<div class="sv-action" id="sv-pd-add-btn">
 							<div class="sv-action__content">
 								<button class="sd-action sd-paneldynamic__add-btn sd-paneldynamic__add-btn--list-mode sd-paneldynamic__btn" type="button">
-									<span>Add new</span>
+									<span><span class="sv-string-viewer">Add new</span></span>
 								</button>
 							</div>
 						</div>
