--- a/tests/markup/snapshots/paneldynamic-progress-bottom-legacy-navigation.snap.html
+++ b/tests/markup/snapshots/paneldynamic-progress-bottom-legacy-navigation.snap.html
@@ -22,7 +22,7 @@
 				</div>
 			</div>
 			<button class="sv-paneldynamic__add-btn" type="button">
-				<span>Add new</span>
+				<span><span class="sv-string-viewer">Add new</span></span>
 			</button>
 			<div class="sv-paneldynamic__progress-text">1 of 2</div>
 		</div>
