--- a/tests/markup/snapshots/paneldynamic-remove-btn-right.snap.html
+++ b/tests/markup/snapshots/paneldynamic-remove-btn-right.snap.html
@@ -17,7 +17,7 @@
 						</div>
 					</div>
 					<button class="sd-action sd-action--negative sd-paneldynamic__btn sd-paneldynamic__remove-btn" type="button">
-						<span>Remove</span>
+						<span><span class="sv-string-viewer">Remove</span></span>
 						<span class="sd-hidden">
 						</span>
 					</button>
@@ -43,7 +43,7 @@
 								<div class="sv-action" id="sv-pd-add-btn">
 									<div class="sv-action__content">
 										<button class="sd-action sd-paneldynamic__add-btn sd-paneldynamic__add-btn--list-mode sd-paneldynamic__btn" type="button">
-											<span>Add new</span>
+											<span><span class="sv-string-viewer">Add new</span></span>
 										</button>
 									</div>
 								</div>
