--- a/tests/markup/snapshots/paneldynamic-no-footer-2.snap.html
+++ b/tests/markup/snapshots/paneldynamic-no-footer-2.snap.html
@@ -18,7 +18,7 @@
 								<div class="sv-action">
 									<div class="sv-action__content">
 										<button class="sd-action sd-action--negative sd-paneldynamic__btn sd-paneldynamic__remove-btn" type="button">
-											<span>Remove</span>
+											<span><span class="sv-string-viewer">Remove</span></span>
 											<span class="sd-hidden">
 											</span>
 										</button>
