--- a/tests/markup/snapshots/paneldynamic-remove-btn-action-bar.snap.html
+++ b/tests/markup/snapshots/paneldynamic-remove-btn-action-bar.snap.html
@@ -18,7 +18,7 @@
 								<div class="sv-action" id="remove-panel-testid0panel0">
 									<div class="sv-action__content">
 										<button class="sd-action sd-action--negative sd-paneldynamic__btn sd-paneldynamic__remove-btn" type="button">
-											<span>Remove</span>
+											<span><span class="sv-string-viewer">Remove</span></span>
 											<span class="sd-hidden">
 											</span>
 										</button>
@@ -49,7 +49,7 @@
 								<div class="sv-action" id="sv-pd-add-btn">
 									<div class="sv-action__content">
 										<button class="sd-action sd-paneldynamic__add-btn sd-paneldynamic__add-btn--list-mode sd-paneldynamic__btn" type="button">
-											<span>Add new</span>
+											<span><span class="sv-string-viewer">Add new</span></span>
 										</button>
 									</div>
 								</div>
