work for the https://github.com/surveyjs/survey-library/issues/7691

--- a/tests/markup/snapshots/boolean.snap.html
+++ b/tests/markup/snapshots/boolean.snap.html
@@ -1,6 +1,6 @@
 <div class="sv_qbln sv_qcbc">
 	<label class="sv-boolean sv-boolean--indeterminate">
-		<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-visuallyhidden" id="testid0i" name="name" type="checkbox" value="">
+		<input aria-invalid="false" aria-labelledby="testid0_ariaTitle" aria-required="false" class="sv-visuallyhidden" id="testid0i" name="name" role="switch" type="checkbox" value="">
 		<div class="sv-boolean__thumb-ghost">
 			<span class="sv-boolean__label">
 				<span class="sv-string-viewer">No</span>
