--- a/tests/markup/snapshots/boolean-checkbox-disabled-defaultV2.snap.html
+++ b/tests/markup/snapshots/boolean-checkbox-disabled-defaultV2.snap.html
@@ -1,7 +1,7 @@
 <div class="sd-selectbase">
 	<div class="sd-checkbox sd-checkbox--checked sd-checkbox--disabled sd-item sd-item--checked sd-item--disabled sd-selectbase__item">
 		<label class="sd-selectbase__label">
-			<input aria-invalid="false" aria-label="Question title" aria-required="false" checked="" class="sd-checkbox__control sd-item__control sd-visuallyhidden" disabled="" id="testid0i" name="name" type="checkbox" value="true">
+			<input checked="" class="sd-checkbox__control sd-item__control sd-visuallyhidden" disabled="" id="testid0i" name="name" type="checkbox" value="true">
 			<span class="sd-checkbox__decorator sd-item__decorator">
 				<svg class="sd-checkbox__svg sd-item__svg">
 					<use xlink:href="#icon-v2check" class="">
