--- a/tests/markup/snapshots/boolean-checkbox.snap.html
+++ b/tests/markup/snapshots/boolean-checkbox.snap.html
@@ -1,7 +1,7 @@
 <div class="sv_qbln sv_qcbc">
 	<div class="sv-boolean sv-boolean--indeterminate">
 		<label>
-			<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sv-visuallyvisible" id="testid0i" name="name" type="checkbox" value="">
+			<input class="sv-visuallyvisible" id="testid0i" name="name" type="checkbox" value="">
 			<span class="sv-boolean__decorator sv-item__decorator">
 				<span class="check">
 				</span>
