--- a/tests/markup/snapshots/boolean-v2.snap.html
+++ b/tests/markup/snapshots/boolean-v2.snap.html
@@ -1,6 +1,6 @@
 <div class="sd-boolean-root sd-scrollable-container sv_qbln sv_qcbc">
 	<label class="sd-boolean sd-boolean--allowhover sd-boolean--indeterminate">
-		<input aria-invalid="false" aria-label="Question title" aria-required="false" class="sd-boolean__control sd-visuallyhidden" id="testid0i" name="name" type="checkbox" value="">
+		<input aria-invalid="false" aria-labelledby="testid0_ariaTitle" aria-required="false" class="sd-boolean__control sd-visuallyhidden" id="testid0i" name="name" role="switch" type="checkbox" value="">
 		<div class="sd-boolean__thumb-ghost">
 			<span class="sd-boolean__label">
 				<span class="sv-string-viewer">No</span>
