--- a/tests/markup/snapshots/file-2-zip-png.snap.html
+++ b/tests/markup/snapshots/file-2-zip-png.snap.html
@@ -45,28 +45,13 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<span class="sd-file__preview">
-				<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
-					<svg class="sd-file__default-image sv-svg-icon" role="img">
-						<use xlink:href="#icon-defaultfile" class="">
-						</use>
-					</svg>
-					<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
-						<span class="sd-hidden">Remove this file</span>
-						<svg class="sv-svg-icon" role="img">
-							<use xlink:href="#icon-delete" class="">
+			<div class="sd-file__page">
+				<span class="sd-file__preview">
+					<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
+						<svg class="sd-file__default-image sv-svg-icon" role="img">
+							<use xlink:href="#icon-defaultfile" class="">
 							</use>
-							<title class="">Remove this file</title>
 						</svg>
-					</div>
-				</div>
-				<div class="sd-file__sign">
-					<a download="item1.zip" href="#item1.zip" title="item1.zip">item1.zip</a>
-				</div>
-			</span>
-			<span class="sd-file__preview">
-				<div class="sd-file__image-wrapper">
-					<img alt="File preview" src="#item2.png">
 						<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
 							<span class="sd-hidden">Remove this file</span>
 							<svg class="sv-svg-icon" role="img">
@@ -77,9 +62,26 @@
 						</div>
 					</div>
 					<div class="sd-file__sign">
-						<a download="item2.png" href="#item2.png" title="item2.png">item2.png</a>
+						<a download="item1.zip" href="#item1.zip" title="item1.zip">item1.zip</a>
 					</div>
 				</span>
+				<span class="sd-file__preview">
+					<div class="sd-file__image-wrapper">
+						<img alt="File preview" src="#item2.png">
+							<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
+								<span class="sd-hidden">Remove this file</span>
+								<svg class="sv-svg-icon" role="img">
+									<use xlink:href="#icon-delete" class="">
+									</use>
+									<title class="">Remove this file</title>
+								</svg>
+							</div>
+						</div>
+						<div class="sd-file__sign">
+							<a download="item2.png" href="#item2.png" title="item2.png">item2.png</a>
+						</div>
+					</span>
+				</div>
 			</div>
 		</div>
 	</div>
