--- a/tests/markup/snapshots/file-mob2-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-png.snap.html
@@ -45,22 +45,24 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<span class="sd-file__preview">
-				<div class="sd-file__image-wrapper">
-					<img alt="File preview" src="#item1.png">
-						<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
-							<span class="sd-hidden">Remove this file</span>
-							<svg class="sv-svg-icon" role="img">
-								<use xlink:href="#icon-delete" class="">
-								</use>
-								<title class="">Remove this file</title>
-							</svg>
+			<div class="sd-file__page">
+				<span class="sd-file__preview">
+					<div class="sd-file__image-wrapper">
+						<img alt="File preview" src="#item1.png">
+							<div class="sd-context-btn sd-context-btn--negative sd-file__remove-file-button">
+								<span class="sd-hidden">Remove this file</span>
+								<svg class="sv-svg-icon" role="img">
+									<use xlink:href="#icon-delete" class="">
+									</use>
+									<title class="">Remove this file</title>
+								</svg>
+							</div>
 						</div>
-					</div>
-					<div class="sd-file__sign">
-						<a download="item1.png" href="#item1.png" title="item1.png">item1.png</a>
-					</div>
-				</span>
+						<div class="sd-file__sign">
+							<a download="item1.png" href="#item1.png" title="item1.png">item1.png</a>
+						</div>
+					</span>
+				</div>
 			</div>
 		</div>
 	</div>
