--- a/tests/markup/snapshots/file-mob2-zip-png-ro.snap.html
+++ b/tests/markup/snapshots/file-mob2-zip-png-ro.snap.html
@@ -45,25 +45,29 @@
 			</div>
 		</div>
 		<div class="sd-file__list">
-			<span class="sd-file__preview">
-				<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
-					<svg class="sd-file__default-image sv-svg-icon" role="img">
-						<use xlink:href="#icon-defaultfile" class="">
-						</use>
-					</svg>
-				</div>
-				<div class="sd-file__sign">
-					<a download="item1.zip" href="#item1.zip" title="item1.zip">item1.zip</a>
-				</div>
-			</span>
-			<span class="sd-file__preview" style="display:none;">
-				<div class="sd-file__image-wrapper">
-					<img alt="File preview" src="#item2.png">
+			<div class="sd-file__page">
+				<span class="sd-file__preview">
+					<div class="sd-file__image-wrapper sd-file__image-wrapper--default-image">
+						<svg class="sd-file__default-image sv-svg-icon" role="img">
+							<use xlink:href="#icon-defaultfile" class="">
+							</use>
+						</svg>
 					</div>
 					<div class="sd-file__sign">
-						<a download="item2.png" href="#item2.png" title="item2.png">item2.png</a>
+						<a download="item1.zip" href="#item1.zip" title="item1.zip">item1.zip</a>
 					</div>
 				</span>
+			</div>
+			<div class="sd-file__page sd-file__page--hidden">
+				<span class="sd-file__preview">
+					<div class="sd-file__image-wrapper">
+						<img alt="File preview" src="#item2.png">
+						</div>
+						<div class="sd-file__sign">
+							<a download="item2.png" href="#item2.png" title="item2.png">item2.png</a>
+						</div>
+					</span>
+				</div>
 			</div>
 			<div class="sv-action-bar sv-action-bar--default-size-mode">
 				<div class="sv-action" id="prevPage">
