all platforms, markup and screenshot test https://github.com/surveyjs/survey-creator/issues/5185

--- a/tests/markup/snapshots/boolean-checkbox-custom-icon.snap.html
+++ b/tests/markup/snapshots/boolean-checkbox-custom-icon.snap.html
@@ -11,7 +11,7 @@
 				</span>
 			</span>
 			<span class="sv-boolean__label" id="testid0_ariaTitle">
-				<span class="sv-string-viewer">Question title</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">Question title</span>
 			</span>
 		</label>
 	</div>
