--- a/tests/markup/snapshots/boolean-radio-v2.snap.html
+++ b/tests/markup/snapshots/boolean-radio-v2.snap.html
@@ -1,22 +1,22 @@
-<div class="sv_qcbc sv_qbln sd-scrollable-container sd-scrollable-container--compact">
+<div class="sd-scrollable-container sd-scrollable-container--compact sv_qbln sv_qcbc">
 	<fieldset class="sd-selectbase" role="presentation">
 		<div class="sd-item sd-item--checked sd-radio--checked" role="presentation">
 			<label class="sd-selectbase__label">
-				<input checked="" class="sd-visuallyhidden sd-item__control sd-radio__control" name="name" type="radio" value="false">
+				<input checked="" class="sd-item__control sd-radio__control sd-visuallyhidden" name="name" type="radio" value="false">
 				<span class="sd-item__decorator sd-radio__decorator">
 				</span>
 				<span class="sd-item__control-label">
-					<span class="sv-string-viewer">No</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">No</span>
 				</span>
 			</label>
 		</div>
 		<div class="sd-item" role="presentation">
 			<label class="sd-selectbase__label">
-				<input class="sd-visuallyhidden sd-item__control sd-radio__control" name="name" type="radio" value="true">
+				<input class="sd-item__control sd-radio__control sd-visuallyhidden" name="name" type="radio" value="true">
 				<span class="sd-item__decorator sd-radio__decorator">
 				</span>
 				<span class="sd-item__control-label">
-					<span class="sv-string-viewer">Yes</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">Yes</span>
 				</span>
 			</label>
 		</div>
