--- a/tests/markup/snapshots/boolean-radio.snap.html
+++ b/tests/markup/snapshots/boolean-radio.snap.html
@@ -1,10 +1,10 @@
-<div class="sv_qcbc sv_qbln">
+<div class="sv_qbln sv_qcbc">
 	<fieldset role="presentation">
 		<div role="presentation">
 			<label>
 				<input name="name" type="radio" value="false">
 				<span>
-					<span class="sv-string-viewer">No</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">No</span>
 				</span>
 			</label>
 		</div>
@@ -12,7 +12,7 @@
 			<label>
 				<input checked="" name="name" type="radio" value="true">
 				<span>
-					<span class="sv-string-viewer">Yes</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">Yes</span>
 				</span>
 			</label>
 		</div>
