--- a/tests/markup/snapshots/matrixdropdown-vertical.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-vertical.snap.html
@@ -15,7 +15,7 @@
 		<tbody>
 			<tr class="sd-table__row sd-table__row--expanded sd-table__row--has-panel">
 				<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--row-text" colspan="1" data-responsive-title="" title="">
-					<span class="sv-string-viewer">
+					<span class="sv-string-viewer sv-string-viewer--multiline">
 					</span>
 				</td>
 				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
@@ -31,7 +31,7 @@
 			</tr>
 			<tr class="sd-table__row sd-table__row--expanded sd-table__row--has-panel">
 				<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--row-text" colspan="1" data-responsive-title="" title="">
-					<span class="sv-string-viewer">
+					<span class="sv-string-viewer sv-string-viewer--multiline">
 					</span>
 				</td>
 				<td class="sd-table__cell" colspan="1" data-responsive-title="" title="">
