--- a/tests/markup/snapshots/matrixdropdown.snap.html
+++ b/tests/markup/snapshots/matrixdropdown.snap.html
@@ -5,11 +5,11 @@
 				<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--empty sd-table__cell--header sd-table__cell--text">
 				</td>
 				<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--header sd-table__cell--text">
-					<span class="sv-string-viewer">
+					<span class="sv-string-viewer sv-string-viewer--multiline">
 					</span>
 				</th>
 				<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--header sd-table__cell--text">
-					<span class="sv-string-viewer">
+					<span class="sv-string-viewer sv-string-viewer--multiline">
 					</span>
 				</th>
 			</tr>
