--- a/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-defaultV2.snap.html
@@ -4,13 +4,13 @@
 			<thead>
 				<tr>
 					<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--header">
-						<span class="sv-string-viewer">Column 1</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Column 1</span>
 					</th>
 					<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--header">
-						<span class="sv-string-viewer">Column 2</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Column 2</span>
 					</th>
 					<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--header">
-						<span class="sv-string-viewer">Column 3</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Column 3</span>
 					</th>
 					<td class="sd-table__cell sd-table__cell--action sd-table__cell--column-title sd-table__cell--empty sd-table__cell--header">
 					</td>
