--- a/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns-mobile.snap.html
@@ -5,12 +5,12 @@
 				<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--empty sd-table__cell--header">
 				</td>
 				<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--header sd-table__cell--radiogroup">
-					<span class="sv-string-viewer">col1</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">col1</span>
 					<span>&nbsp;</span>
 					<span class="sd-question__required-text">*</span>
 				</th>
 				<th class="sd-table__cell sd-table__cell--checkbox sd-table__cell--column-title sd-table__cell--header">
-					<span class="sv-string-viewer">col2</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">col2</span>
 					<span>&nbsp;</span>
 					<span class="sd-question__required-text">*</span>
 				</th>
