--- a/tests/markup/snapshots/multipletext-error-top-v2.snap.html
+++ b/tests/markup/snapshots/multipletext-error-top-v2.snap.html
@@ -17,7 +17,7 @@
 			<td class="sd-multipletext__cell">
 				<label class="sd-input sd-multipletext__item-container sd-multipletext__item-container--allow-focus sd-multipletext__item-container--error">
 					<span class="sd-multipletext__item-title">
-						<span class="sv-string-viewer">Text 1</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Text 1</span>
 						<span>&nbsp;</span>
 						<span aria-hidden="true" class="sd-question__required-text">*</span>
 					</span>
