--- a/tests/markup/snapshots/page-swnl-title-v2.snap.html
+++ b/tests/markup/snapshots/page-swnl-title-v2.snap.html
@@ -4,7 +4,7 @@
 			<h5 class="sd-element__title sd-question__title sd-title" id="testid0_ariaTitle">
 				<span aria-hidden="true" class="sd-element__num" style="position:static;">1.</span>
 				<span>&nbsp;</span>
-				<span class="sv-string-viewer">Question title</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">Question title</span>
 			</h5>
 		</div>
 		<div class="sd-question__content sd-text__content" role="presentation">
@@ -18,7 +18,7 @@
 			<h5 class="sd-element__title sd-question__title sd-title" id="testid1_ariaTitle">
 				<span aria-hidden="true" class="sd-element__num" style="position:static;">2.</span>
 				<span>&nbsp;</span>
-				<span class="sv-string-viewer">Question title</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">Question title</span>
 			</h5>
 		</div>
 		<div class="sd-question__content sd-text__content" role="presentation">
