--- a/tests/markup/snapshots/question-errors-v2-bottom.snap.html
+++ b/tests/markup/snapshots/question-errors-v2-bottom.snap.html
@@ -4,7 +4,7 @@
 			<h5 class="sd-element__title sd-question__title sd-question__title--error sd-question__title--required sd-title" id="testid0_ariaTitle">
 				<span aria-hidden="true" class="sd-element__num" style="position:static;">1.</span>
 				<span>&nbsp;</span>
-				<span class="sv-string-viewer">Question title</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">Question title</span>
 				<span>&nbsp;</span>
 				<span aria-hidden="true" class="sd-question__required-text">*</span>
 			</h5>
