--- a/tests/markup/snapshots/question-title-with-html.snap.html
+++ b/tests/markup/snapshots/question-title-with-html.snap.html
@@ -1,7 +1,7 @@
 <h5 class="sd-element__title sd-question__title sd-title" id="testid0_ariaTitle">
 	<span aria-hidden="true" class="sd-element__num" style="position:static;">1.</span>
 	<span>&nbsp;</span>
-	<span class="sv-string-viewer">
+	<span class="sv-string-viewer sv-string-viewer--multiline">
 		<span style="font-size:12px;">
 			<strong>
 				<span style="font-family:Comic Sans MS,cursive;">
