--- a/tests/markup/snapshots/survey-header-advanced-mobile.snap.html
+++ b/tests/markup/snapshots/survey-header-advanced-mobile.snap.html
@@ -5,6 +5,6 @@
 </div>
 <div class="sv-header__description" style="max-width:512px;">
 	<div>
-		<span class="sv-string-viewer">Description</span>
+		<span class="sv-string-viewer sv-string-viewer--multiline">Description</span>
 	</div>
 </div>
