--- a/tests/markup/snapshots/survey-header.snap.html
+++ b/tests/markup/snapshots/survey-header.snap.html
@@ -2,5 +2,5 @@
 	<span class="sv-string-viewer">Test</span>
 </h3>
 <div>
-	<span class="sv-string-viewer">Description</span>
+	<span class="sv-string-viewer sv-string-viewer--multiline">Description</span>
 </div>
