--- a/tests/markup/snapshots/boolean-radio-values.snap.html
+++ b/tests/markup/snapshots/boolean-radio-values.snap.html
@@ -4,7 +4,7 @@
 			<label>
 				<input name="name" type="radio" value="false">
 				<span>
-					<span class="sv-string-viewer">No</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">No</span>
 				</span>
 			</label>
 		</div>
@@ -12,7 +12,7 @@
 			<label>
 				<input checked="" name="name" type="radio" value="true">
 				<span>
-					<span class="sv-string-viewer">Yes</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">Yes</span>
 				</span>
 			</label>
 		</div>
