--- a/tests/markup/snapshots/boolean-v2.snap.html
+++ b/tests/markup/snapshots/boolean-v2.snap.html
@@ -3,7 +3,7 @@
 		<input aria-invalid="false" aria-labelledby="testid0_ariaTitle" aria-required="false" class="sd-boolean__control sd-visuallyhidden" id="testid0i" name="name" role="switch" type="checkbox" value="">
 		<div class="sd-boolean__thumb-ghost">
 			<span class="sd-boolean__label">
-				<span class="sv-string-viewer">No</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">No</span>
 			</span>
 		</div>
 		<div class="sd-boolean__switch">
@@ -12,7 +12,7 @@
 		</div>
 		<div class="sd-boolean__thumb-ghost">
 			<span class="sd-boolean__label">
-				<span class="sv-string-viewer">Yes</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">Yes</span>
 			</span>
 		</div>
 	</label>
