--- a/tests/markup/snapshots/boolean-value-v2.snap.html
+++ b/tests/markup/snapshots/boolean-value-v2.snap.html
@@ -3,19 +3,19 @@
 		<input aria-invalid="false" aria-labelledby="testid0_ariaTitle" aria-required="false" checked="" class="sd-boolean__control sd-visuallyhidden" id="testid0i" name="name" role="switch" type="checkbox" value="true">
 		<div class="sd-boolean__thumb-ghost">
 			<span class="sd-boolean__label sd-boolean__label--false sd-checkbox__label--disabled">
-				<span class="sv-string-viewer">No</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">No</span>
 			</span>
 		</div>
 		<div class="sd-boolean__switch">
 			<span class="sd-boolean__thumb">
 				<span class="sd-boolean__thumb-text">
-					<span class="sv-string-viewer">Yes</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">Yes</span>
 				</span>
 			</span>
 		</div>
 		<div class="sd-boolean__thumb-ghost">
 			<span class="sd-boolean__label sd-boolean__label--true">
-				<span class="sv-string-viewer">Yes</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">Yes</span>
 			</span>
 		</div>
 	</label>
