--- a/tests/markup/snapshots/file-mob2-png.snap.html
+++ b/tests/markup/snapshots/file-mob2-png.snap.html
@@ -3,7 +3,7 @@
 	<div class="sd-file__drag-area">
 		<div class="sd-file__decorator">
 			<span class="sd-file__drag-area-placeholder">
-				<span class="sv-string-viewer">Drag and drop a file here or click the button below to select a file to upload.</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">Drag and drop a file here or click the button below to select a file to upload.</span>
 			</span>
 			<div class="sd-file__wrapper">
 				<div class="sd-action-bar sd-file__actions-container">
