--- a/tests/markup/snapshots/file-modern.snap.html
+++ b/tests/markup/snapshots/file-modern.snap.html
@@ -3,7 +3,7 @@
 	<div>
 		<div class="sv-file__decorator">
 			<span class="sv-hidden">
-				<span class="sv-string-viewer">Drag and drop a file here or click the button below to select a file to upload.</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">Drag and drop a file here or click the button below to select a file to upload.</span>
 			</span>
 			<div class="sv-file__wrapper">
 				<label aria-label="Select File" class="sv-btn sv-file__choose-btn" for="testid0i" tabindex="0">
