--- a/tests/markup/snapshots/file-png.snap.html
+++ b/tests/markup/snapshots/file-png.snap.html
@@ -3,7 +3,7 @@
 	<div>
 		<div class="sv-file__decorator">
 			<span class="sv-hidden">
-				<span class="sv-string-viewer">Drag and drop a file here or click the button below to select a file to upload.</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">Drag and drop a file here or click the button below to select a file to upload.</span>
 			</span>
 			<div>
 				<label aria-label="Replace file" class="sv_q_file_choose_button" for="testid0i" tabindex="0">
