--- a/tests/markup/snapshots/martix-celltype-text-a11y.snap.html
+++ b/tests/markup/snapshots/martix-celltype-text-a11y.snap.html
@@ -5,7 +5,7 @@
 				<td class="sv_matrix_cell_header sv_matrix_cell--dropdown">
 				</td>
 				<th class="sv_matrix_cell_header sv_matrix_cell--text">
-					<span class="sv-string-viewer">Number of people</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">Number of people</span>
 				</th>
 			</tr>
 		</thead>
