--- a/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
+++ b/tests/markup/snapshots/matrixdropdown-cell-errors-bottom.snap.html
@@ -5,7 +5,7 @@
 				<td class="sd-table__cell sd-table__cell--column-title sd-table__cell--dropdown sd-table__cell--empty sd-table__cell--header">
 				</td>
 				<th class="sd-table__cell sd-table__cell--column-title sd-table__cell--header sd-table__cell--text">
-					<span class="sv-string-viewer">col1</span>
+					<span class="sv-string-viewer sv-string-viewer--multiline">col1</span>
 					<span>&nbsp;</span>
 					<span class="sd-question__required-text">*</span>
 				</th>
