--- a/tests/markup/snapshots/matrixdynamic-default.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-default.snap.html
@@ -4,13 +4,13 @@
 			<thead>
 				<tr>
 					<th class="sv_matrix_cell_header sv_matrix_cell--dropdown">
-						<span class="sv-string-viewer">Column 1</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Column 1</span>
 					</th>
 					<th class="sv_matrix_cell_header sv_matrix_cell--dropdown">
-						<span class="sv-string-viewer">Column 2</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Column 2</span>
 					</th>
 					<th class="sv_matrix_cell_header sv_matrix_cell--dropdown">
-						<span class="sv-string-viewer">Column 3</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Column 3</span>
 					</th>
 					<td class="sv_matrix_cell_header sv_matrix_cell--action">
 					</td>
