--- a/tests/markup/snapshots/multipletext.snap.html
+++ b/tests/markup/snapshots/multipletext.snap.html
@@ -4,7 +4,7 @@
 			<td>
 				<label class="sv_q_mt_label">
 					<span class="sv_q_mt_title">
-						<span class="sv-string-viewer">Text 1</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Text 1</span>
 					</span>
 					<div class="sv_q_mt_item">
 						<input aria-invalid="false" aria-label="Text 1" aria-required="false" class="sv_q_text_root" id="testid0_0i" placeholder="" type="text">
@@ -14,7 +14,7 @@
 			<td>
 				<label class="sv_q_mt_label">
 					<span class="sv_q_mt_title">
-						<span class="sv-string-viewer">Text 2</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Text 2</span>
 					</span>
 					<div class="sv_q_mt_item">
 						<input aria-invalid="false" aria-label="Text 2" aria-required="false" class="sv_q_text_root" id="testid0_1i" placeholder="" type="text">
@@ -26,7 +26,7 @@
 			<td>
 				<label class="sv_q_mt_label">
 					<span class="sv_q_mt_title">
-						<span class="sv-string-viewer">Text 3</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Text 3</span>
 					</span>
 					<div class="sv_q_mt_item">
 						<input aria-invalid="false" aria-label="Text 3" aria-required="false" class="sv_q_text_root" id="testid0_2i" placeholder="" type="text">
@@ -36,7 +36,7 @@
 			<td>
 				<label class="sv_q_mt_label">
 					<span class="sv_q_mt_title">
-						<span class="sv-string-viewer">Text 4</span>
+						<span class="sv-string-viewer sv-string-viewer--multiline">Text 4</span>
 					</span>
 					<div class="sv_q_mt_item">
 						<input aria-invalid="false" aria-label="Text 4" aria-required="false" class="sv_q_text_root" id="testid0_3i" placeholder="" type="text">
