--- a/tests/markup/snapshots/panel-question-headers.snap.html
+++ b/tests/markup/snapshots/panel-question-headers.snap.html
@@ -2,10 +2,10 @@
 	<div class="sd-element sd-element--complex sd-element--with-frame sd-panel sd-row__panel" id="testidp0">
 		<div class="sd-element__header sd-element__header--location-top sd-panel__header">
 			<h4 aria-label="panel_title" class="sd-element__title sd-panel__title sd-title">
-				<span class="sv-string-viewer">panel_title</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">panel_title</span>
 			</h4>
 			<div class="sd-description sd-panel__description">
-				<span class="sv-string-viewer">panel_description</span>
+				<span class="sv-string-viewer sv-string-viewer--multiline">panel_description</span>
 			</div>
 		</div>
 		<div class="sd-panel__content" id="testidp0_content">
@@ -14,10 +14,10 @@
 					<div class="sd-element sd-element--nested sd-question sd-question--title-top sd-row__question sd-row__question--small" data-name="question1" id="testid0">
 						<div class="sd-element__header sd-element__header--location-top sd-question__header sd-question__header--location-top">
 							<h5 class="sd-element__title sd-question__title sd-title" id="testid0_ariaTitle">
-								<span class="sv-string-viewer">Question title</span>
+								<span class="sv-string-viewer sv-string-viewer--multiline">Question title</span>
 							</h5>
 							<div class="sd-description sd-question__description">
-								<span class="sv-string-viewer">Question description</span>
+								<span class="sv-string-viewer sv-string-viewer--multiline">Question description</span>
 							</div>
 						</div>
 						<div class="sd-question__content sd-text__content" role="presentation">
