--- a/tests/markup/snapshots/ranking-selectToRankEnabled-vertical.snap.html
+++ b/tests/markup/snapshots/ranking-selectToRankEnabled-vertical.snap.html
@@ -86,7 +86,7 @@
 	</div>
 	<div class="sv-ranking__container sv-ranking__container--empty sv-ranking__container--to" data-ranking="to-container">
 		<div class="sv-ranking__container-placeholder">
-			<span class="sv-string-viewer">Drag choices here to rank them</span>
+			<span class="sv-string-viewer sv-string-viewer--multiline">Drag choices here to rank them</span>
 		</div>
 	</div>
 </div>
