--- a/tests/markup/snapshots/signaturepad-loading.snap.html
+++ b/tests/markup/snapshots/signaturepad-loading.snap.html
@@ -1,6 +1,6 @@
 <div class="sd-signaturepad sjs_sp_container" style="width:300px;">
 	<div class="sjs_sp_placeholder" style="display:none;">
-		<span class="sv-string-viewer">Sign here</span>
+		<span class="sv-string-viewer sv-string-viewer--multiline">Sign here</span>
 	</div>
 	<div>
 		<canvas class="sd-signaturepad__canvas sjs_sp_canvas" height="200" style="user-select:none; width:300px;" tabindex="-1" width="300">
