--- a/tests/markup/snapshots/signaturepad-scaled.snap.html
+++ b/tests/markup/snapshots/signaturepad-scaled.snap.html
@@ -1,6 +1,6 @@
 <div class="sjs_sp_container sv_q_signaturepad" style="width:100%;">
 	<div class="sjs_sp_placeholder">
-		<span class="sv-string-viewer">Sign here</span>
+		<span class="sv-string-viewer sv-string-viewer--multiline">Sign here</span>
 	</div>
 	<div>
 		<img class="sjs_sp__background-image" src="https://surveyjs.io/Content/Images/examples/image-picker/lion.jpg" style="width:100%;">
