--- a/tests/markup/snapshots/survey-header-advanced.snap.html
+++ b/tests/markup/snapshots/survey-header-advanced.snap.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="sv-header__description" style="max-width:512px;">
 		<div>
-			<span class="sv-string-viewer">Description</span>
+			<span class="sv-string-viewer sv-string-viewer--multiline">Description</span>
 		</div>
 	</div>
 </div>
