Fix matrix's row text show twice in modern, default theme

--- a/tests/markup/snapshots/martix-celltype-text-a11y.snap.html
+++ b/tests/markup/snapshots/martix-celltype-text-a11y.snap.html
@@ -11,7 +11,7 @@
 		</thead>
 		<tbody>
 			<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row1">
-				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Age 0-4" title="">
+				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" data-responsive-title="Age 0-4" title="">
 					<span class="sv-string-viewer">Age 0-4</span>
 				</td>
 				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
@@ -21,7 +21,7 @@
 				</td>
 			</tr>
 			<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row3">
-				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Age 5-11" title="">
+				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" data-responsive-title="Age 5-11" title="">
 					<span class="sv-string-viewer">Age 5-11</span>
 				</td>
 				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
@@ -31,7 +31,7 @@
 				</td>
 			</tr>
 			<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row5">
-				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Age 12-15" title="">
+				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" data-responsive-title="Age 12-15" title="">
 					<span class="sv-string-viewer">Age 12-15</span>
 				</td>
 				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
@@ -41,7 +41,7 @@
 				</td>
 			</tr>
 			<tr class="sv_matrix_row" data-sv-drop-target-matrix-row="testid0row7">
-				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Age 16+" title="">
+				<td class="sv_matrix_cell sv-table__cell--row-text" colspan="1" data-responsive-title="Age 16+" title="">
 					<span class="sv-string-viewer">Age 16+</span>
 				</td>
 				<td class="sv_matrix_cell" colspan="1" data-responsive-title="Number of people" title="Number of people">
