--- a/tests/markup/snapshots/tagbox-without-textWrapEnabled.snap.html
+++ b/tests/markup/snapshots/tagbox-without-textWrapEnabled.snap.html
@@ -4,7 +4,7 @@
 			<div class="sv_q_dropdown__value sv_q_tagbox__value">
 				<div class="sv_q_tagbox__hint">
 					<div class="sv_q_tagbox__hint-suffix-wrapper">
-						<input aria-controls="testid0i_list" aria-expanded="false" aria-label="Question title" autocomplete="off" class="sv_q_dropdown__filter-string-input sv_q_tagbox__filter-string-input" inputmode="none" placeholder="Select..." readonly="" role="combobox" size="1" type="text">
+						<input aria-controls="testid0i_list" aria-expanded="false" aria-label="Question title" autocomplete="off" class="sv_q_dropdown__filter-string-input sv_q_tagbox__filter-string-input" inputmode="text" placeholder="Select..." readonly="" role="combobox" size="1" type="text">
 					</div>
 				</div>
 			</div>
@@ -17,60 +17,33 @@
 			</div>
 		</div>
 		<div>
-			<div class="sv-dropdown-popup sv-multi-select-list sv-popup sv-popup--dropdown-overlay sv-popup--overlay" style="display:none;" tabindex="-1">
+			<div class="sv-dropdown-popup sv-multi-select-list sv-popup sv-popup--dropdown" style="display:none;" tabindex="-1">
 				<div class="sv-popup__container">
 					<div class="sv-popup__shadow">
 						<div class="sv-popup__body-content">
 							<div class="sv-popup__scrolling-content">
 								<div class="sv-popup__content">
 									<div class="sv-list__container">
-										<div class="sv-list__filter">
-											<div class="sv-list__filter-icon">
-												<svg class="sv-svg-icon" role="img">
-													<use xlink:href="#icon-search" class="">
-													</use>
-												</svg>
-											</div>
-											<input aria-label="Type to search..." class="sv-list__input" placeholder="Type to search..." type="text">
-										</div>
 										<div class="sv-list__empty-container" style="display:none;">
 											<div aria-label="No data to display" class="sv-list__empty-text">No data to display</div>
 										</div>
 										<ul class="sv-list" role="listbox">
-											<li aria-selected="false" class="sv-list__item sv-list__item-text--wrap" role="option" tabindex="0">
+											<li aria-selected="false" class="sv-list__item" role="option" tabindex="0">
 												<div class="sv-list__item-body" style="padding-inline-start:16px;" title="item1">
 													<span class="sv-string-viewer">item1</span>
 												</div>
 											</li>
-											<li aria-selected="false" class="sv-list__item sv-list__item-text--wrap" role="option" tabindex="0">
+											<li aria-selected="false" class="sv-list__item" role="option" tabindex="0">
 												<div class="sv-list__item-body" style="padding-inline-start:16px;" title="item2">
 													<span class="sv-string-viewer">item2</span>
 												</div>
 											</li>
-											<li aria-selected="false" class="sv-list__item sv-list__item-text--wrap" role="option" tabindex="0">
+											<li aria-selected="false" class="sv-list__item" role="option" tabindex="0">
 												<div class="sv-list__item-body" style="padding-inline-start:16px;" title="item3">
 													<span class="sv-string-viewer">item3</span>
 												</div>
 											</li>
 										</ul>
-									</div>
-								</div>
-							</div>
-							<div class="sv-popup__body-footer">
-								<div class="sv-action-bar sv-action-bar--default-size-mode">
-									<div class="sv-action">
-										<div class="sv-action__content">
-											<button class="sd-btn sv-popup__body-footer-item sv-popup__button sv-popup__button--cancel" role="button" tabindex="0" title="Cancel" type="button">
-												<span>Cancel</span>
-											</button>
-										</div>
-									</div>
-									<div class="sv-action sv-action--space">
-										<div class="sv-action__content">
-											<button class="sd-btn sv-popup__body-footer-item sv-popup__button sv-popup__button--done" disabled="" role="button" tabindex="0" title="OK" type="button">
-												<span>OK</span>
-											</button>
-										</div>
 									</div>
 								</div>
 							</div>
