--- a/tests/markup/snapshots/tagbox-without-search.snap.html
+++ b/tests/markup/snapshots/tagbox-without-search.snap.html
@@ -28,17 +28,17 @@
 											<div aria-label="No data to display" class="sv-list__empty-text">No data to display</div>
 										</div>
 										<ul class="sv-list" role="listbox">
-											<li aria-selected="false" class="sv-list__item" role="option" tabindex="0">
+											<li aria-selected="false" class="sv-list__item sv-list__item-text--wrap" role="option" tabindex="0">
 												<div class="sv-list__item-body" style="padding-inline-start:16px;" title="item1">
 													<span class="sv-string-viewer">item1</span>
 												</div>
 											</li>
-											<li aria-selected="false" class="sv-list__item" role="option" tabindex="0">
+											<li aria-selected="false" class="sv-list__item sv-list__item-text--wrap" role="option" tabindex="0">
 												<div class="sv-list__item-body" style="padding-inline-start:16px;" title="item2">
 													<span class="sv-string-viewer">item2</span>
 												</div>
 											</li>
-											<li aria-selected="false" class="sv-list__item" role="option" tabindex="0">
+											<li aria-selected="false" class="sv-list__item sv-list__item-text--wrap" role="option" tabindex="0">
 												<div class="sv-list__item-body" style="padding-inline-start:16px;" title="item3">
 													<span class="sv-string-viewer">item3</span>
 												</div>
